--- a/.github/workflows/template_sync.yml
+++ b/.github/workflows/template_sync.yml
@@ -9,10 +9,10 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Template Sync
-        uses: BernhardStrauss/actions-template-sync@v0.8.0
+        uses: AndreasAugustin/actions-template-sync@v2
         with:
-          source_repo: "https://github.com/source_owner/source_repo.git"
-          source_branch: "main"
+          source_repo_path: "https://github.com/AstroNvim/template.git"
+          upstream_branch: "main"
           github_token: ${{ secrets.GITHUB_TOKEN }}
